--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   <h3 id="bio">Bio</h3>
     
 			
-<p>I am an Assistant Professor at the <a href="https://ccbef.swufe.edu.cn/ENGLISH.htm" target="blank">China Center for Behavioral Economicsi and Finance</a> at Southwestern University of Finance and Economics. I obtained my Ph.D. from the Department of Economics, Virginia Polytechnic Institute and State University in 2019.</p>
+<p>I am an Assistant Professor at the <a href="https://ccbef.swufe.edu.cn/ENGLISH.htm" target="blank">China Center for Behavioral Economics and Finance</a> at Southwestern University of Finance and Economics. I obtained my Ph.D. from the Department of Economics, Virginia Polytechnic Institute and State University in 2019.</p>
 <p>My research tries to bring insights from psychology to bear on topics in microeconomics.
 <p><strong><a href="./pdf/cv-local.pdf" target="blank">Curriculum Vitae</a></strong> (Updated April 2022)</p>
 
