--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ P. R. China</span></p>
 <h3 id="workingpapers">Working Papers</h3>
 
 
-<p><a style="margin:20px 0 5px;"><a href="./pdf/HTE.pdf" target="blank">Testing Rational Hypotheses in Signaling Games</a><br>
+<p><a href="./pdf/HTE.pdf" target="blank">Testing Rational Hypotheses in Signaling Games</a><br>
 
 <p style="margin:0 0 5px;">(with Adam Dominiak)</p>
 
