--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ P. R. China</span></p>
 <h3 id="workingpapers">Working Papers</h3>
 
 
-<p><a href="./pdf/HTE.pdf" target="blank">Testing Rational Hypotheses in Signaling Games</a><br>
+<h4 style="margin:20px 0 5px;"><a href="./pdf/HTE.pdf" target="blank">Testing Rational Hypotheses in Signaling Games</a></h4>
 
 <p style="margin:0 0 5px;">(with Adam Dominiak)</p>
 
@@ -84,13 +84,13 @@ P. R. China</span></p>
 
 <p style="margin:0 0 5px;">(with Hans Haller)</p>
 
-<p style="margin:0 0 5px;"><em>Journal of Economics</em> 137: 229–254, 2022 </p>
+<p style="margin:0 0 5px;"><em>Journal of Economics</em> 137: 229–254, 2022. </p>
 
 
 	    
 <h4 style="margin:20px 0 5px;"><a href="https://www.tandfonline.com/doi/abs/10.1080/13504851.2020.1861188" target="blank">Misleading Sales in Saliencen Markets</a></h4>
 
-<p style="margin:0 0 5px;"><em>Applied Economics Letters</em> 29 (2): 159-166, 2022 </p>
+<p style="margin:0 0 5px;"><em>Applied Economics Letters</em> 29 (2): 159-166, 2022. </p>
 
 
 	    
@@ -104,7 +104,7 @@ P. R. China</span></p>
 <p style="margin:0 0 5px;">(공동저자: 강판상)</p>
 
 
-<p style="margin:0 0 5px;">경제학연구 68 (4): 53-91, 2020</p>
+<p style="margin:0 0 5px;">경제학연구 68 (4): 53-91, 2020.</p>
 
 
 
@@ -114,7 +114,7 @@ P. R. China</span></p>
 <p style="margin:0 0 5px;">(공동저자: 강판상)</p>
 
 
-<p style="margin:0 0 5px;">경제학연구 68 (1): 43-69, 2020</p>
+<p style="margin:0 0 5px;">경제학연구 68 (1): 43-69, 2020.</p>
 
 
    
