--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		     <hr/>
                 
 <p><strong>Email</strong>: <a href="dwlee05@gmail.com">dwlee05@gmail.com</a></p>
-<p>[<a href="https://scholar.google.com/citations?hl=en&user=kBlHiMoAAAAJ">Google Scholar</a>]
+<p>[<a href="https://scholar.google.com/citations?hl=en&user=kBlHiMoAAAAJ" target="blank">Google Scholar</a>]
 [<a href="">ArXiv preprints</a>]</p>
 		    
             </header>
@@ -41,7 +41,7 @@
 			
 <p>I am an Assistant Professor at the <a href="https://ccbef.swufe.edu.cn/ENGLISH.htm" target="blank">China Center for Behavioral Economics and Finance</a> at Southwestern University of Finance and Economics. I obtained my Ph.D. from the Department of Economics, Virginia Polytechnic Institute and State University in 2019.</p>
 <p>My research tries to bring insights from psychology to bear on topics in microeconomics.
-<p><strong><a href="./pdf/cv-local.pdf" target="blank">Curriculum Vitae</a></strong> (Updated April 2022)</p>
+<p><a href="./pdf/cv-local.pdf" target="blank">Curriculum Vitae</a> (Updated April 2022)</p>
 
 
 
