--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 <h2 id="workingpapers">Working Papers</h2>
 
 
-<h3 style="margin:50px 0 10px;">Testing Rational Hypotheses in Signaling Games</a></h3>
+<h3 style="margin:50px 0 10px;">Testing Rational Hypotheses in Signaling Games</a></h3> [<a href="./pdf/HTE.pdf" target="blank">PDF</a>]
 
 <p style="margin:0 0 10px;">(with Adam Dominiak)</p>
 
