--- a/index.html
+++ b/index.html
@@ -71,13 +71,13 @@
 
 <p style="margin:0 0 5px;">(with Hans Haller)</p>
 
-<p style="margin:0 0 5px;"><em>Journal of Economics</em>, 2020, Vol. 137, pp. 229–254. </p>
+<p style="margin:0 0 5px;"><em>Journal of Economics</em> 137: 229–254, 2022. </p>
 
 
 	    
 <h4 style="margin:20px 0 5px;"><a href="https://www.tandfonline.com/doi/abs/10.1080/13504851.2020.1861188" target="blank">Misleading Sales in Saliencen Markets</a></h4>
 
-<p style="margin:0 0 5px;"><em>Applied Economics Letters</em>, 2022, Vol 29 (2), pp. 159-166. </p>
+<p style="margin:0 0 5px;"><em>Applied Economics Letters</em> 29 (2): 159-166, 2022. </p>
 
 
 	    
