--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 <p style="margin:0 0 5px;">(with Adam Dominiak)</p>
 
-<p style="margin:0 0 5px;">Accepted subject to minor revision at <em>European Economic Review</em></p>
+<p style="margin:0 0 5px;">R&R at <em>European Economic Review</em></p>
 
 
 <hr>
