--- a/index.html
+++ b/index.html
@@ -55,26 +55,31 @@
 <hr>
 <h3 id="workingpapers">Current Working Papers/ Work in Progress</h3>
 
-<p style="margin:0 0 5px;">Sabotage and Free Riding in Contests with a Group-Specific Public-Good/Bad Prize (with Kyun Hwan Baik)</p>
+<h4 style="margin:20px 0 5px;">Sabotage and Free Riding in Contests with a Group-Specific Public-Good/Bad Prize</h4> 
+<p style="margin:0 0 5px;">(with Kyun Hwan Baik)</p>
+
+<h4 style="margin:20px 0 5px;">Multi-Battle Contests: Theory and Experiments</h4> 
+<p style="margin:0 0 5px;">(with Yichuan Cai)</p>
+
+<h4 style="margin:20px 0 5px;">Econographics in China</h4> 
+<p style="margin:0 0 5px;">(with Gavin Kader)</p>
 	
-<p style="margin:0 0 5px;">Multi-Battle Contests: Theory and Experiments (with Yichuan Cai)</p>
 
-<p style="margin:0 0 5px;">Choquet Rationality in Extensive-Form Games (with Adam Dominiak and Hans Haller)</p>
 
-<p style="margin:0 0 5px;">Econographics in China (with Gavin Kader)</p>
 	
 
 <hr>
 <h3 id="publications">Publications</h3>
 
 
-<h4 style="margin:20px 0 5px;"><a href="https://doi.org/10.1016/j.euroecorev.2023.104610" target="blank">Testing Rational Hypotheses in Signaling Games</a></h4> <p style="margin:0 0 5px;">(with Adam Dominiak)</p>
+<h4 style="margin:20px 0 5px;"><a href="https://doi.org/10.1016/j.euroecorev.2023.104610" target="blank">Testing Rational Hypotheses in Signaling Games</a></h4> 
+<p style="margin:0 0 5px;">(with Adam Dominiak)</p>
 
 <p style="margin:0 0 5px;"><em>European Economic Review</em> 160: 104610, 2023.</p>
 
 	
-<h4 style="margin:20px 0 5px;"><a href="https://link.springer.com/article/10.1007/s00712-022-00789-5" target="blank">Selective Attribute Rules</a></h4> <p style="margin:0 0 5px;">(with Hans Haller)</p>
-
+<h4 style="margin:20px 0 5px;"><a href="https://link.springer.com/article/10.1007/s00712-022-00789-5" target="blank">Selective Attribute Rules</a></h4> 
+<p style="margin:0 0 5px;">(with Hans Haller)</p>
 <p style="margin:0 0 5px;"><em>Journal of Economics</em> 137: 229–254, 2022. </p>
 
 
