--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 <h3 id="workingpapers">Current Working Papers/ Work in Progress</h3>
 
 <h4 style="margin:20px 0 5px;">Sabotage and Free Riding in Contests with a Group-Specific Public-Good/Bad Prize</h4> 
-<p style="margin:0 0 5px;">(with Kyun Hwan Baik)</p>
+<p style="margin:0 0 5px;">(with Kyung Hwan Baik)</p>
 
 <h4 style="margin:20px 0 5px;">Multi-Battle Contests: Theory and Experiments</h4> 
 <p style="margin:0 0 5px;">(with Yichuan Cai)</p>
