--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
 <h4 style="margin:20px 0 5px;">Sabotage and Free Riding in Contests with a Group-Specific Public-Good/Bad Prize</h4> 
 <p style="margin:0 0 5px;">(with Kyung Hwan Baik)</p>
 
+<h4 style="margin:20px 0 5px;">Pension Systems Revisited in the Age of Automation and a Greying Economy</h4> 
+<p style="margin:0 0 5px;">(with Jae-Yoon Kim)</p>
+	
 <h4 style="margin:20px 0 5px;">Multi-Battle Contests: Theory and Experiments</h4> 
 <p style="margin:0 0 5px;">(with Yichuan Cai)</p>
 
