--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
 
 <h4 style="margin:20px 0 5px;">Pension Systems Revisited in the Age of Automation and a Greying Economy</h4> 
 <p style="margin:0 0 5px;">(with Jae-Yoon Kim)</p>
+
+<p style="margin:0 0 5px;">R&R at <em>Journal of Economic Behavior & Organization</em></p>
 	
 <h4 style="margin:20px 0 5px;">Multi-Battle Contests: Theory and Experiments</h4> 
 <p style="margin:0 0 5px;">(with Yichuan Cai)</p>
