--- a/index.html
+++ b/index.html
@@ -58,10 +58,11 @@
 <h4 style="margin:20px 0 5px;">Sabotage and Free Riding in Contests with a Group-Specific Public-Good/Bad Prize</h4> 
 <p style="margin:0 0 5px;">(with Kyung Hwan Baik)</p>
 
-<h4 style="margin:20px 0 5px;">Pension Systems Revisited in the Age of Automation and a Greying Economy</h4> 
-<p style="margin:0 0 5px;">(with Jae-Yoon Kim)</p>
+<h4 style="margin:20px 0 5px;">The Emergence of Bounded Rationality of Large Language Models</h4> 
+<p style="margin:0 0 5px;">(with Gavin Kader)</p>
 
-<p style="margin:0 0 5px;">R&R at <em>Journal of Economic Behavior & Organization</em></p>
+<h4 style="margin:20px 0 5px;">The Effect of Resource Asymmetry in Contest Experiments</h4> 
+<p style="margin:0 0 5px;">(Liangfo Zhao)</p>
 	
 <h4 style="margin:20px 0 5px;">Multi-Battle Contests: Theory and Experiments</h4> 
 <p style="margin:0 0 5px;">(with Yichuan Cai)</p>
@@ -76,6 +77,14 @@
 <h3 id="publications">Publications</h3>
 
 
+<h4 style="margin:20px 0 5px;">Pension Systems Revisited in the Age of Automation and a Greying Economy</h4> 
+<p style="margin:0 0 5px;">(with Jae-Yoon Kim)</p>
+
+<p style="margin:0 0 5px;">Accepted at <em>Journal of Economic Behavior & Organization</em></p>
+
+
+
+	
 <h4 style="margin:20px 0 5px;"><a href="https://doi.org/10.1016/j.euroecorev.2023.104610" target="blank">Testing Rational Hypotheses in Signaling Games</a></h4> 
 <p style="margin:0 0 5px;">(with Adam Dominiak)</p>
 
