--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 <p style="margin:0 0 5px;">(with Gavin Kader)</p>
 
 <h4 style="margin:20px 0 5px;">The Effect of Resource Asymmetry in Contest Experiments</h4> 
-<p style="margin:0 0 5px;">(Liangfo Zhao)</p>
+<p style="margin:0 0 5px;">(with Liangfo Zhao)</p>
 	
 <h4 style="margin:20px 0 5px;">Multi-Battle Contests: Theory and Experiments</h4> 
 <p style="margin:0 0 5px;">(with Yichuan Cai)</p>
