--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 <h3 id="publications">Publications</h3>
 
 
-<h4 style="margin:20px 0 5px;">Pension Systems Revisited in the Age of Automation and a Greying Economy</h4> 
+<h4 style="margin:20px 0 5px;">Pension Systems Revisited in the Age of Automation and an Aging Economy</h4> 
 <p style="margin:0 0 5px;">(with Jae-Yoon Kim)</p>
 
 <p style="margin:0 0 5px;">Accepted at <em>Journal of Economic Behavior & Organization</em></p>
