--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@
 <h3 id="publications">Publications</h3>
 
 
-<h4 style="margin:20px 0 5px;">Pension Systems Revisited in the Age of Automation and an Aging Economy</h4> 
+<h4 style="margin:20px 0 5px;"><a href="https://doi.org/10.1016/j.jebo.2024.106784" target="blank">Pension Systems Revisited in the Age of Automation and an Aging Economy</a></h4>
 <p style="margin:0 0 5px;">(with Jae-Yoon Kim)</p>
 
-<p style="margin:0 0 5px;">Accepted at <em>Journal of Economic Behavior & Organization</em></p>
+<p style="margin:0 0 5px;"><em>Journal of Economic Behavior & Organization</em> 228: 106784, 2024.</p>
 
 
 
