--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 <h4 style="margin:20px 0 5px;">Sabotage and Free Riding in Contests with a Group-Specific Public-Good/Bad Prize</h4> 
 <p style="margin:0 0 5px;">(with Kyung Hwan Baik)</p>
 
-<h4 style="margin:20px 0 5px;">The Emergence of Bounded Rationality of Large Language Models</h4> 
+<h4 style="margin:20px 0 5px;"><a href="https://arxiv.org/abs/2412.13013" target="blank">The Emergence of Strategic Reasoning of Large Language Models</a></h4>	
 <p style="margin:0 0 5px;">(with Gavin Kader)</p>
 
 <h4 style="margin:20px 0 5px;">The Effect of Resource Asymmetry in Contest Experiments</h4> 
