--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <p>My research tries to bring insights from psychology to bear on topics in microeconomics.
 <p><strong><a href="./pdf/cv.pdf" target="blank">Curriculum Vitae</a></strong> (Updated April 2024)</p>
 <p><strong>Email</strong>: <a href="mailto:dwlee05@gmail.com">dwlee05@gmail.com</a></p>
-
+<p><a href="https://scholar.google.com/citations?user=kBlHiMoAAAAJ&hl=en">Google Scholar</a></p>
 
 
 <hr>
