--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <p>My research tries to bring insights from psychology to bear on topics in microeconomics.
 
 <p style="margin-bottom: 0;"> <strong>Email</strong>: <a href="mailto:dwlee05@gmail.com">dwlee05@gmail.com</a></p>
-<p style="margin: 0; display: inline;">[a href="./pdf/cv.pdf" target="blank">Curriculum Vitae</a>][<a href="https://scholar.google.com/citations?user=kBlHiMoAAAAJ&hl=en">Google Scholar</a>]</p>
+<p style="margin: 0; display: inline;">[<a href="./pdf/cv.pdf" target="blank">Curriculum Vitae</a>][<a href="https://scholar.google.com/citations?user=kBlHiMoAAAAJ&hl=en">Google Scholar</a>]</p>
 
 
 
