--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 <p>I am an Associate Professor at the <a href="https://ccbef.swufe.edu.cn/ENGLISH.htm" target="blank">China Center for Behavioral Economics and Finance</a> at Southwestern University of Finance and Economics. I obtained my Ph.D. from the Department of Economics, Virginia Polytechnic Institute and State University in 2019.</p>
 <p>My research tries to bring insights from psychology to bear on topics in microeconomics.
 
-<p style="margin-bottom: 0;"> <strong>Email</strong>: <a href="mailto:dwlee05@gmail.com">dwlee05@gmail.com</a></p>
-<p style="margin: 0; display: inline;">[<a href="./pdf/cv.pdf" target="blank">Curriculum Vitae</a>][<a href="https://scholar.google.com/citations?user=kBlHiMoAAAAJ&hl=en">Google Scholar</a>]</p>
+<p> <strong>Email</strong>: <a href="mailto:dwlee05@gmail.com">dwlee05@gmail.com</a></p>
+<p style="margin: 0 0 5px; display: inline;">[<a href="./pdf/cv.pdf" target="blank">Curriculum Vitae</a>][<a href="https://scholar.google.com/citations?user=kBlHiMoAAAAJ&hl=en">Google Scholar</a>]</p>
 
 
 
