--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   <h3 id="bio">Bio</h3>
     
 			
-<p>I am an Associate Professor at the <a href="https://ccbef.swufe.edu.cn/ENGLISH.htm" target="blank">China Center for Behavioral Economics and Finance</a> at Southwestern University of Finance and Economics. I obtained my Ph.D. from the Department of Economics, Virginia Polytechnic Institute and State University in 2019.</p>
+<p>I am an Associate Professor at the <a href="https://ccbef.swufe.edu.cn/ENGLISH/Home.htm" target="blank">China Center for Behavioral Economics and Finance</a> at Southwestern University of Finance and Economics. I obtained my Ph.D. from the Department of Economics, Virginia Polytechnic Institute and State University in 2019.</p>
 <p>My research tries to bring insights from psychology to bear on topics in microeconomics.
 
 <p> <strong>Email</strong>: <a href="mailto:dwlee05@gmail.com">dwlee05@gmail.com</a></p>
