--- a/index.html
+++ b/index.html
@@ -58,13 +58,14 @@
 <h3 id="workingpapers">Working Papers</h3>
 
 <h4 style="margin:20px 0 5px;"><a href="https://arxiv.org/pdf/2502.08100" target="blank">Sabotage and Free Riding in Contests with a Group-Specific Public-Good/Bad Prize</a></h4>
-<p style="margin:0 0 5px;">(with Kyung Hwan Baik)</p>
+<p style="margin:0 0 5px;">(with Kyung Hwan Baik), R&R at <em>Journal of Public Economic Theory</em></p>
+	
+<h4 style="margin:20px 0 5px;"><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=5092235" target="blank">Limited Power of Outside Options: New Evidence from Ultimatum Games</a></h4>	
+<p style="margin:0 0 5px;">(with Qingrong He and Qichao Shi), R&R at <em>Economics Letters</em></p>
 	
 <h4 style="margin:20px 0 5px;"><a href="https://arxiv.org/pdf/2412.13013" target="blank">The Emergence of Strategic Reasoning of Large Language Models</a></h4>	
 <p style="margin:0 0 5px;">(with Gavin Kader)</p>
 
-<h4 style="margin:20px 0 5px;"><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=5092235" target="blank">Limited Power of Outside Options: New Evidence from Ultimatum Games</a></h4>	
-<p style="margin:0 0 5px;">(with Qingrong He and Qichao Shi), R&R</p>
 
 <h4 style="margin:20px 0 5px;">The Effect of Resource Asymmetry in Contest Experiments</h4> 
 <p style="margin:0 0 5px;">(with Liangfo Zhao)</p>
