--- a/index.html
+++ b/index.html
@@ -60,8 +60,6 @@
 <h4 style="margin:20px 0 5px;"><a href="https://arxiv.org/pdf/2502.08100" target="blank">Sabotage and Free Riding in Contests with a Group-Specific Public-Good/Bad Prize</a></h4>
 <p style="margin:0 0 5px;">(with Kyung Hwan Baik), R&R at <em>Journal of Public Economic Theory</em></p>
 	
-<h4 style="margin:20px 0 5px;"><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=5092235" target="blank">Limited Power of Outside Options: New Evidence from Ultimatum Games</a></h4>	
-<p style="margin:0 0 5px;">(with Qingrong He and Qichao Shi), R&R at <em>Economics Letters</em></p>
 	
 <h4 style="margin:20px 0 5px;"><a href="https://arxiv.org/pdf/2412.13013" target="blank">The Emergence of Strategic Reasoning of Large Language Models</a></h4>	
 <p style="margin:0 0 5px;">(with Gavin Kader)</p>
@@ -73,7 +71,8 @@
 <h4 style="margin:20px 0 5px;">Multi-Battle Contests: Theory and Experiments</h4> 
 <p style="margin:0 0 5px;">(with Yichuan Cai)</p>
 
-
+<h4 style="margin:20px 0 5px;">Endogenous Syndicate Formation in (Rent-Seeking) Contests</h4> 
+<p style="margin:0 0 5px;">(with Kyung Hwan Baik)</p>
 	
 
 
@@ -82,7 +81,12 @@
 <hr>
 <h3 id="publications">Publications</h3>
 
+<h4 style="margin:20px 0 5px;"><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=5092235" target="blank">Limited Power of Outside Options: New Evidence from Ultimatum Games</a></h4>	
+<p style="margin:0 0 5px;">(with Qingrong He and Qichao Shi)</p> 
+	
+<p style="margin:0 0 5px;">Accepted at <em>Economics Letters</em></p>
 
+	
 <h4 style="margin:20px 0 5px;"><a href="https://doi.org/10.1016/j.jebo.2024.106784" target="blank">Pension Systems Revisited in the Age of Automation and an Aging Economy</a></h4>
 <p style="margin:0 0 5px;">(with Jae-Yoon Kim)</p>
 
