--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   <h3 id="bio">Bio</h3>
     
 			
-<p>I am an Associate Professor at the <a href="https://ccbef.swufe.edu.cn/ENGLISH/Home.htm" target="blank">China Center for Behavioral Economics and Finance</a> at Southwestern University of Finance and Economics. I obtained my Ph.D. from the Department of Economics, Virginia Polytechnic Institute and State University in 2019.</p>
+<p>I am an Associate Professor at the <a href="https://ies.swufe.edu.cn" target="blank">Center for Intelligence Economic Science</a> at Southwestern University of Finance and Economics. I obtained my Ph.D. from the Department of Economics, Virginia Polytechnic Institute and State University in 2019.</p>
 <p>My research tries to bring insights from psychology to bear on topics in microeconomics.
 
 <p> <strong>Email</strong>: <a href="mailto:dwlee05@gmail.com">dwlee05@gmail.com</a></p>
@@ -81,18 +81,16 @@
 <hr>
 <h3 id="publications">Publications</h3>
 
-<h4 style="margin:20px 0 5px;"><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=5092235" target="blank">Limited Power of Outside Options: New Evidence from Ultimatum Games</a></h4>	
+<h4 style="margin:20px 0 5px;"><a href="https://doi.org/10.1016/j.econlet.2025.112506" target="blank">Limited Power of Outside Options: New Evidence from Ultimatum Games</a></h4>	
 <p style="margin:0 0 5px;">(with Qingrong He and Qichao Shi)</p> 
 	
-<p style="margin:0 0 5px;">Accepted at <em>Economics Letters</em>.</p>
+<p style="margin:0 0 5px;">Economics Letters at <em>Economics Letters</em> 255: 112506, 2025.</p>
 
 	
 <h4 style="margin:20px 0 5px;"><a href="https://doi.org/10.1016/j.jebo.2024.106784" target="blank">Pension Systems Revisited in the Age of Automation and an Aging Economy</a></h4>
 <p style="margin:0 0 5px;">(with Jae-Yoon Kim)</p>
 
 <p style="margin:0 0 5px;"><em>Journal of Economic Behavior & Organization</em> 228: 106784, 2024.</p>
-
-
 
 	
 <h4 style="margin:20px 0 5px;"><a href="https://doi.org/10.1016/j.euroecorev.2023.104610" target="blank">Testing Rational Hypotheses in Signaling Games</a></h4> 
