--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 <h4 style="margin:20px 0 5px;"><a href="https://doi.org/10.1016/j.econlet.2025.112506" target="blank">Limited Power of Outside Options: New Evidence from Ultimatum Games</a></h4>	
 <p style="margin:0 0 5px;">(with Qingrong He and Qichao Shi)</p> 
 	
-<p style="margin:0 0 5px;">Economics Letters at <em>Economics Letters</em> 255: 112506, 2025.</p>
+<p style="margin:0 0 5px;"><em>Economics Letters</em> 255: 112506, 2025.</p>
 
 	
 <h4 style="margin:20px 0 5px;"><a href="https://doi.org/10.1016/j.jebo.2024.106784" target="blank">Pension Systems Revisited in the Age of Automation and an Aging Economy</a></h4>
