--- a/index.html
+++ b/index.html
@@ -73,6 +73,9 @@
 
 <h4 style="margin:20px 0 5px;">Endogenous Syndicate Formation in (Rent-Seeking) Contests</h4> 
 <p style="margin:0 0 5px;">(with Kyung Hwan Baik)</p>
+
+<h4 style="margin:20px 0 5px;">The Incentives for Market Economy Transition under International Market Competition</h4> 
+<p style="margin:0 0 5px;">(with Sang-Kee Kim)</p>	
 	
 
 
