--- a/index.html
+++ b/index.html
@@ -57,19 +57,11 @@
 <hr>
 <h3 id="workingpapers">Working Papers</h3>
 
-<h4 style="margin:20px 0 5px;"><a href="https://arxiv.org/pdf/2502.08100" target="blank">Sabotage and Free Riding in Contests with a Group-Specific Public-Good/Bad Prize</a></h4>
-<p style="margin:0 0 5px;">(with Kyung Hwan Baik), R&R at <em>Journal of Public Economic Theory</em></p>
+
 	
 	
 <h4 style="margin:20px 0 5px;"><a href="https://arxiv.org/pdf/2412.13013" target="blank">The Emergence of Strategic Reasoning of Large Language Models</a></h4>	
 <p style="margin:0 0 5px;">(with Gavin Kader)</p>
-
-
-<h4 style="margin:20px 0 5px;">The Effect of Resource Asymmetry in Contest Experiments</h4> 
-<p style="margin:0 0 5px;">(with Liangfo Zhao)</p>
-	
-<h4 style="margin:20px 0 5px;">Multi-Battle Contests: Theory and Experiments</h4> 
-<p style="margin:0 0 5px;">(with Yichuan Cai)</p>
 
 <h4 style="margin:20px 0 5px;">Endogenous Syndicate Formation in (Rent-Seeking) Contests</h4> 
 <p style="margin:0 0 5px;">(with Kyung Hwan Baik)</p>
@@ -77,12 +69,26 @@
 <h4 style="margin:20px 0 5px;">The Incentives for Market Economy Transition under International Market Competition</h4> 
 <p style="margin:0 0 5px;">(with Sang-Kee Kim)</p>	
 	
+<h4 style="margin:20px 0 5px;">The Effect of Resource Asymmetry in Contest Experiments</h4> 
+<p style="margin:0 0 5px;">(with Liangfo Zhao)</p>
+	
+<h4 style="margin:20px 0 5px;">Multi-Battle Contests: Theory and Experiments</h4> 
+<p style="margin:0 0 5px;">(with Yichuan Cai)</p>
+
+
+
+
+	
 
 
 	
 
 <hr>
 <h3 id="publications">Publications</h3>
+
+<h4 style="margin:20px 0 5px;"><a href="https://arxiv.org/pdf/2502.08100" target="blank">Sabotage and Free Riding in Contests with a Group-Specific Public-Good/Bad Prize</a></h4>
+<p style="margin:0 0 5px;">(with Kyung Hwan Baik)</p>
+<p style="margin:0 0 5px;">	Accepted at <em>Journal of Public Economic Theory</em></p>
 
 <h4 style="margin:20px 0 5px;"><a href="https://doi.org/10.1016/j.econlet.2025.112506" target="blank">Limited Power of Outside Options: New Evidence from Ultimatum Games</a></h4>	
 <p style="margin:0 0 5px;">(with Qingrong He and Qichao Shi)</p> 
