--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 <h4 style="margin:20px 0 5px;"><a href="https://arxiv.org/pdf/2412.13013" target="blank">The Emergence of Strategic Reasoning of Large Language Models</a></h4>	
 <p style="margin:0 0 5px;">(with Gavin Kader)</p>
 
-<h4 style="margin:20px 0 5px;"><a href="https://swb.skku.edu/_res/khbaik/etc/SYN.pdf" target="blank">Endogenous Syndicate Formation in (Rent-Seeking) Contests</h4> 
+<h4 style="margin:20px 0 5px;"><a href="https://swb.skku.edu/_res/khbaik/etc/SYN.pdf" target="blank">Endogenous Syndicate Formation in (Rent-Seeking) Contests</a></h4> 
 <p style="margin:0 0 5px;">(with Kyung Hwan Baik)</p>
 
 <h4 style="margin:20px 0 5px;">The Incentives for Market Economy Transition under International Market Competition</h4> 
